--- a/Vulcanoriosity/Lahar.html
+++ b/Vulcanoriosity/Lahar.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-    <font face="Lora">
     <head>
-        <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-        <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-        <center><h2>Lahar</h2></center>
+        <link rel="stylesheet" href="CSS/Style.css">
     </head>
     <body>
+        <header>
+            <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
+            <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
+            <center><h2>Lahar</h2></center>
+        </header>
             <center><img src="Imagenes/Laharr.jpg" width="490" height="337.5"/></center>
             <center>
             <p>
@@ -20,8 +22,9 @@
             acabó con la vida de 25 000 personas.
         </p>
     </center>
-    <footer>Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><a href = "TrabajaConNosotros.html" ><h2>Trabaja con nosotros</h2></a></center></footer>
-
-    </body>
-    </font>
+    <footer>
+        <div class="info">
+        Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
+        </div>
+    </footer>    </body>
 </html>
