--- a/Vulcanoriosity/MainScreen.html
+++ b/Vulcanoriosity/MainScreen.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-    <font face="Lora">
     <head>
-        <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-        <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-        <center><h2>Clica a tu interés</h2></center>
+        <link rel="stylesheet" href="CSS/Style.css">
     </head>
     <body>
+        <header>
+            <div class="sticky">
+            <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
+            <center><h3>Correo: volcanoriosity@mail.com<br>   Contacto: 9678653434</h3></center>
+            <center><h2>Clica a tu interés</h2></center>
+            </div>
+        </header>
+        
         <center>
             <a title="Foto" href="Volcan.html"><img src="Imagenes/definicion.png" width=500 height="300"/></a>
             <a title="Foto" href="PlacasTectonicas.html"><img src="Imagenes/PLACAS.png" width=500 height="300"/></a>
@@ -21,7 +26,16 @@
             <a title="Foto" href="MaterialVolcanico.html"><img src="Imagenes/MATERIALVOLCANICO.png" width=500 height="300"/></a> 
                 <br>
         </center>
-        <footer>Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><a href = "TrabajaConNosotros.html" ><h2>Trabaja con nosotros</h2></a></center></footer>
-    </body>
-    </font>
+        <footer>
+            <div class="info">
+                <center>Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br></center>
+                <div class="trabaja">
+                    <center><a href = "TrabajaConNosotros.html" ><h2>Trabaja con nosotros</h2></a></center>
+                </div>
+            </div>
+            <footer>
+                <div class="info">
+                Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
+                </div>
+            </footer>    </body>
 </html>
