--- a/Vulcanoriosity/MaterialVolcanico.html
+++ b/Vulcanoriosity/MaterialVolcanico.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-    <font face="Lora">
     <head>
-        <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-        <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-        <center><h2>Material volcánico</h2></center>
+        <link rel="stylesheet" href="CSS/Style.css">
     </head>
     <body>
+        <header>
+            <div class="sticky">
+                <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
+                <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
+                <center><h2>Material volcánico</h2></center>
+            </div>
+            <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="Lora.css">
+            <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="Loratitulo.css">
+        </header>
         <center>El Pu‘u ‘Ō‘ō, cono volcánico de Hawái.        </center>
         <center><img src="Imagenes/puuoo.jpg" width="1280" height="720" />
         <br>
@@ -48,9 +56,10 @@
         La temperatura y composición química de los volcanes del sistema solar varían considerablemente entre los planetas y los satélites. Además, el tipo de materiales que arrojan en sus erupciones es muy diferente de los arrojados en la Tierra.</p>
         <center><img src="Imagenes/Voyager.jpg"  /></center>
 
-        <footer>Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><a href = "TrabajaConNosotros.html" ><h2>Trabaja con nosotros</h2></a></center></footer>
-
+        <footer>
+            <div class="info">
+            Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
+            </div>
+        </footer>
     </body>
-    </font>
-
 </html>
