--- a/Vulcanoriosity/PlacasTectonicas.html
+++ b/Vulcanoriosity/PlacasTectonicas.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-    <font face="Lora">
     <head>
-        <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-        <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-        <center><h2>Relación entre vulcanismo y las placas tectónicas</h2></center>
+        <link rel="stylesheet" href="CSS/Style.css">
     </head>
     <body>
+        <header>
+            <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
+            <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
+            <center><h2>Relación entre vulcanismo y las placas tectónicas</h2></center>
+        </header>
         <ul>
             <li><h5>Límites de placa divergentes</h5>
                 <p>
@@ -29,7 +31,7 @@
                     superficie, sin embargo, se forma un volcán. Ejemplos típicos son el Monte Etna y los volcanes en el Anillo de Fuego del Pacífico.
                 </p>
                 <center><img src="Imagenes/Convergente.png"/></center>
-                <center><img src="Imagenes/MonteEtna.jpg" width=400 height="300" /><img src="Imagenes/AnilloFuego.jpg.crdownload" width=400 height="300"/></center>
+                <center><img src="Imagenes/MonteEtna.jpg" width=400 height="300" /><img src="Imagenes/Cinturón-de-fuego-del-pacífico.jpg" width=400 height="300"/></center>
             </li>
             <li><h5>Puntos calientes</h5>
                 <p>
@@ -42,8 +44,9 @@
                 <center><img src="Imagenes/PuntosCalientes.png"/></center>
             </li>
         </ul>
-        <footer>Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><a href = "TrabajaConNosotros.html" ><h2>Trabaja con nosotros</h2></a></center></footer>
-
-    </body>
-</font>
+        <footer>
+            <div class="info">
+            Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
+            </div>
+        </footer>    </body>
 </html>
