--- a/Vulcanoriosity/TiposVolcanes.html
+++ b/Vulcanoriosity/TiposVolcanes.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-    <font face="Lora">
     <head>
-        <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-        <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-        <center><h2>Tipos de volcanes según su actividad</h2></center>
+        <link rel="stylesheet" href="CSS/Style.css">
     </head>
     <body>
+        <header>
+            <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
+            <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
+            <center><h2>Tipos de volcanes según su actividad</h2></center>
+        </header>
         <ul>
             <li><h5>Volcanes activos</h5>
                 <p>
@@ -36,8 +38,10 @@
                 <center><img src="Imagenes/VolcanExtinto.jfif"/></center>
             </li>
         </ul>
-        <footer>Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><a href = "TrabajaConNosotros.html" ><h2>Trabaja con nosotros</h2></a></center></footer>
-
+        <footer>
+            <div class="info">
+            Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
+            </div>
+        </footer>
     </body>
-</font>
 </html>
