--- a/Vulcanoriosity/TrabajaConNosotros.html
+++ b/Vulcanoriosity/TrabajaConNosotros.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-    <font face="Lora">
-        <head>
+    <head>
+        <link rel="stylesheet" href="CSS/Style.css">
+    </head>
+    <body>
+        <header>
+            <div class="sticky">
             <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-            <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-        </head>
-        <body>
-            <form method="get">
-                <p>Nombre y apellidos: <input type="text" name= "NombreYApellidos"/></p>
-                <p>Teléfono: <input type="text" name= "Telefono"/></p>
-                <p>Ciudad: <input type="text" name= "Ciudad"/></p>
-                <p>Háblanos sobre ti: <input type="text" name= "Háblanos sobre ti"/></p>
-            </form>
-        </body>
-    </font>
+            <center><h3>Correo: volcanoriosity@mail.com<br>   Contacto: 9678653434</h3></center>
+            <center><h2>Clica a tu interés</h2></center>
+            </div>
+        </header>
+        <form method="get">
+            <p>Nombre y apellidos: <input type="text" name= "NombreYApellidos"/></p>
+            <p>Teléfono: <input type="text" name= "Telefono"/></p>
+            <p>Ciudad: <input type="text" name= "Ciudad"/></p>
+            <p>Háblanos sobre ti: <input type="text" name= "Háblanos sobre ti"/></p>
+            <a class = "form_submit" href="CSS/Style.css"><input type="submit" value="Enviar este formulario" /></a>
+        </form>
+    </body>
 </html>
