--- a/Vulcanoriosity/VolcanEscudo.html
+++ b/Vulcanoriosity/VolcanEscudo.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-    <font face="Lora">
     <head>
-        <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-        <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-        <center><h2>VolcanEscudo</h2></center>
+        <link rel="stylesheet" href="CSS/Style.css">
     </head>
     <body>
+        <header>
+            <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
+            <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
+            <center><h2>VolcanEscudo</h2></center>
+            <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="Lora.css">
+            <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="Loratitulo.css">
+        </header>
         <center>
         <img src="Imagenes/VolcanEscudo.jpg"/>
         <p>
@@ -30,8 +36,10 @@
 
         </p>
     </center>
-    <footer>Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><a href = "TrabajaConNosotros.html" ><h2>Trabaja con nosotros</h2></a></center></footer>
-
+    <footer>
+        <div class="info">
+        Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
+        </div>
+    </footer>
     </body>
-    </font>
 </html>
