MAINSCREEN BUENO FINAL ENTREGA 2

--- a/MainScreen.html
+++ b/MainScreen.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <div class="sticky">
+            <div>
             <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
             <center><h3>Correo: volcanoriosity@mail.com<br>   Contacto: 9678653434</h3></center>
             <center><h2>Clica a tu interés</h2></center>
