Entrega 3 practica individual DSI

--- a/Vulcanoriosity/Flujo.html
+++ b/Vulcanoriosity/Flujo.html
@@ -1,25 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <link rel="stylesheet" href="CSS/Style.css">
-    </head>    
-    <body>
+
+<head>
+    <link rel="stylesheet" href="CSS/Style.css">
+</head>
+
+<body>
+    <div class="cabeza">
         <header>
-            <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-            <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-            <center><h2>Flujo piroclástico</h2></center>
+            <a href="MainScreen.html">
+                <h1>Vulcanoriosity</h1>
+            </a>
+            <h3>Correo: volcanoriosity@mail.com<br> Contacto: 9678653434</h3>
+            <h2>Flujo piroclastico</h2>
         </header>
-        <center><img src="Imagenes/Flujo.jpg_large" width=1280 height="720"/>
+    </div>
+    <div class="cuerpo">
+        <div class="foto"><img src="Imagenes/Flujo.jpg_large" width=50% /></div>
         <p>
             Flujo piroclástico expulsado por el volcán Mayón en Filipinas.<br>
-            Cuando las erupciones de un volcán llegan acompañadas de gases calientes y cenizas se produce lo que se conoce como flujo piroclástico o «nube ardiente». También conocida como avalancha incandescente, el flujo piroclástico se desplaza pendiente abajo a velocidades cercanas a los 200 km/h. La sección basal de estas nubes contienen gases calientes y partículas que flotan en ellos. De esta forma, las nubes transportan fragmentos de rocas que –gracias al rebote de los gases calientes en expansión– se depositan a lo largo de más de 100 km desde su punto de origen.
+            Cuando las erupciones de un volcán llegan acompañadas de gases calientes y cenizas se produce lo que se
+            conoce como flujo piroclástico o «nube ardiente». También conocida como avalancha incandescente, el flujo
+            piroclástico se desplaza pendiente abajo a velocidades cercanas a los 200 km/h. La sección basal de estas
+            nubes contienen gases calientes y partículas que flotan en ellos. De esta forma, las nubes transportan
+            fragmentos de rocas que –gracias al rebote de los gases calientes en expansión– se depositan a lo largo de
+            más de 100 km desde su punto de origen.
             <br>
-            En 1902 una nube ardiente de un pequeño volcán llamado Monte Pelée en la isla caribeña de Martinica destruyó la ciudad portuaria de San Pedro. La destrucción fue tan devastadora que murió casi toda la población (unos 28 000 habitantes). A diferencia de Pompeya, que quedó enterrada en un manto de cenizas en un plazo de tres días y las casas quedaron intactas (salvo los techos por el peso de las cenizas), la ciudad de San Pedro fue destruida solo en minutos y la energía liberada fue tal que los árboles fueron arrancados de raíz, las paredes de las casas desaparecieron y las monturas de los cañones se desintegraron. La erupción del Monte Pelée muestra cuan distintos pueden ser dos volcanes del mismo tipo.
-        </p>            
-    </center>
+            En 1902 una nube ardiente de un pequeño volcán llamado Monte Pelée en la isla caribeña de Martinica destruyó
+            la ciudad portuaria de San Pedro. La destrucción fue tan devastadora que murió casi toda la población (unos
+            28 000 habitantes). A diferencia de Pompeya, que quedó enterrada en un manto de cenizas en un plazo de tres
+            días y las casas quedaron intactas (salvo los techos por el peso de las cenizas), la ciudad de San Pedro fue
+            destruida solo en minutos y la energía liberada fue tal que los árboles fueron arrancados de raíz, las
+            paredes de las casas desaparecieron y las monturas de los cañones se desintegraron. La erupción del Monte
+            Pelée muestra cuan distintos pueden ser dos volcanes del mismo tipo.
+        </p>
+    </div>
     <footer>
         <div class="info">
-        Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
+            Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por
+            LinkedIn: Vulcanoriosity<br>
+            <div class="trabaja">
+                <a href="TrabajaConNosotros.html">
+                    <h2>Trabaja con nosotros</h2>
+                </a>
+            </div>
         </div>
-    </footer>    </body>
+    </footer>
+</body>
+
 </html>
