--- a/Vulcanoriosity/Volcan.html
+++ b/Vulcanoriosity/Volcan.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <link rel="stylesheet" href="CSS/Style.css">
-    </head>
-    <body>
+
+<head>
+    <link rel="stylesheet" href="CSS/Style.css">
+</head>
+
+<body>
+
+    <div class="cabeza">
         <header>
-            <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-            <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-            <center><h2>Volcán</h2></center>
+            <a href="MainScreen.html">
+                <h1>Vulcanoriosity</h1>
+            </a>
+            <h3>Correo: volcanoriosity@mail.com<br> Contacto: 9678653434</h3>
+            <h2>Volcán</h2>
         </header>
-        <center><img src="Imagenes/VolcanBonito.jpg" />
+    </div>
+    <div class="cuerpo">
+        <div class="foto"><img src="Imagenes/VolcanBonito.jpg" width=50% /></div>
         <p>
-        Un volcán (del nombre del dios mitológico romano Vulcano) es una estructura geológica por la que emerge el magma que se divide en lava y gases provenientes del interior de la Tierra. El ascenso del magma ocurre en episodios de actividad violenta denominados erupciones, que pueden variar en intensidad, duración y frecuencia, desde suaves corrientes de lava hasta explosiones extremadamente destructivas. En ocasiones, los volcanes adquieren una forma cónica por la acumulación de material de erupciones anteriores. En la cumbre se encuentra su cráter o caldera.
-        <br>
-        Por lo general, los volcanes se forman en los límites de las placas tectónicas, aunque existen los llamados puntos calientes, donde no hay contacto entre placas, como es el caso de las islas Hawái. Los volcanes pueden tener muchas formas y despedir distintos materiales. Algunas de las formas más comunes son el estratovolcán, el cono de escoria, la caldera volcánica y el volcán en escudo. También existen numerosos volcanes submarinos ubicados a lo largo de las dorsales oceánicas. Algunos volcanes alcanzan una altitud superior a los 6000 metros sobre el nivel del mar. El volcán más alto del mundo es el Nevado Ojos del Salado, en Argentina y Chile, siendo además la segunda cumbre más alta de los hemisferios sur y occidental (solo superado por el cerro argentino Aconcagua).3​
-        <br>
-        Los volcanes no solo existen en la Tierra, sino también en otros planetas y satélites. Algunos están formados por materiales considerados fríos y se denominan criovolcanes. En ellos, el hielo actúa como roca, mientras que el agua fría líquida interna actúa como magma; esto ocurre en la luna de Júpiter llamada Europa.
+            Un volcán (del nombre del dios mitológico romano Vulcano) es una estructura geológica por la que emerge el
+            magma que se divide en lava y gases provenientes del interior de la Tierra. El ascenso del magma ocurre en
+            episodios de actividad violenta denominados erupciones, que pueden variar en intensidad, duración y
+            frecuencia, desde suaves corrientes de lava hasta explosiones extremadamente destructivas. En ocasiones, los
+            volcanes adquieren una forma cónica por la acumulación de material de erupciones anteriores. En la cumbre se
+            encuentra su cráter o caldera.
+            <br>
+            Por lo general, los volcanes se forman en los límites de las placas tectónicas, aunque existen los llamados
+            puntos calientes, donde no hay contacto entre placas, como es el caso de las islas Hawái. Los volcanes
+            pueden tener muchas formas y despedir distintos materiales. Algunas de las formas más comunes son el
+            estratovolcán, el cono de escoria, la caldera volcánica y el volcán en escudo. También existen numerosos
+            volcanes submarinos ubicados a lo largo de las dorsales oceánicas. Algunos volcanes alcanzan una altitud
+            superior a los 6000 metros sobre el nivel del mar. El volcán más alto del mundo es el Nevado Ojos del
+            Salado, en Argentina y Chile, siendo además la segunda cumbre más alta de los hemisferios sur y occidental
+            (solo superado por el cerro argentino Aconcagua).3​
+            <br>
+            Los volcanes no solo existen en la Tierra, sino también en otros planetas y satélites. Algunos están
+            formados por materiales considerados fríos y se denominan criovolcanes. En ellos, el hielo actúa como roca,
+            mientras que el agua fría líquida interna actúa como magma; esto ocurre en la luna de Júpiter llamada
+            Europa.
         </p>
-    </center>
-    <footer>
-        <div class="info">
-        Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
-        </div>
-    </footer>
-    </body>
+    </div>
+    <div class="info">
+        <footer>
+            Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por
+            LinkedIn: Vulcanoriosity<br>
+            <div class="trabaja">
+                <a href="TrabajaConNosotros.html">
+                    <h2>Trabaja con nosotros</h2>
+                </a>
+            </div>
+        </footer>
+    </div>
+</body>
+
 </html>
