--- a/Vulcanoriosity/Lahar.html
+++ b/Vulcanoriosity/Lahar.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <link rel="stylesheet" href="CSS/Style.css">
-    </head>
-    <body>
+
+<head>
+    <link rel="stylesheet" href="CSS/Style.css">
+</head>
+
+<body>
+    <div class="cabeza">
         <header>
-            <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-            <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-            <center><h2>Lahar</h2></center>
+            <a href="MainScreen.html">
+                <h1>Vulcanoriosity</h1>
+            </a>
+            <h3>Correo: volcanoriosity@mail.com<br> Contacto: 9678653434</h3>
+            <h2>Lahar</h2>
         </header>
-            <center><img src="Imagenes/Laharr.jpg" width="490" height="337.5"/></center>
-            <center>
-            <p>
-            Los conos compuestos también producen coladas de barro llamadas lahar, una palabra de origen indonesio. Estos flujos se producen cuando las cenizas y derrubios 
-            volcánicos se saturan de agua y descienden pendiente abajo, normalmente siguiendo los cauces de los ríos. Algunos de los lahares se producen cuando la saturación 
-            es provocada por la lluvia, mientras que en otros casos cuando grandes volúmenes de hielo y nieve se funden por una erupción volcánica. En Islandia, el último caso 
+    </div>
+
+    <div class="foto"><img src="Imagenes/Laharr.jpg" width=50% /></div>
+
+    <div class="cuerpo">
+        <p>
+            Los conos compuestos también producen coladas de barro llamadas lahar, una palabra de origen indonesio.
+            Estos flujos se producen cuando las cenizas y derrubios
+            volcánicos se saturan de agua y descienden pendiente abajo, normalmente siguiendo los cauces de los ríos.
+            Algunos de los lahares se producen cuando la saturación
+            es provocada por la lluvia, mientras que en otros casos cuando grandes volúmenes de hielo y nieve se funden
+            por una erupción volcánica. En Islandia, el último caso
             se denomina jökulhlaup y es un fenómeno devastador.
             <br>
-            Destrucciones importantes de lahares se dieron en 1980 con la erupción del Monte Santa Helena, en Estados Unidos, que a pesar de los destrozos producidos, no 
-            produjo muchas víctimas debido a que la región está poco poblada. Otro fue en 1985 con la erupción del Nevado del Ruiz, en Colombia, la cual generó un lahar que 
+            Destrucciones importantes de lahares se dieron en 1980 con la erupción del Monte Santa Helena, en Estados
+            Unidos, que a pesar de los destrozos producidos, no
+            produjo muchas víctimas debido a que la región está poco poblada. Otro fue en 1985 con la erupción del
+            Nevado del Ruiz, en Colombia, la cual generó un lahar que
             acabó con la vida de 25 000 personas.
         </p>
-    </center>
+    </div>
     <footer>
         <div class="info">
-        Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
+            Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por
+            LinkedIn: Vulcanoriosity<br>
+            <div class="trabaja">
+                <a href="TrabajaConNosotros.html">
+                    <h2>Trabaja con nosotros</h2>
+                </a>
+            </div>
         </div>
-    </footer>    </body>
+    </footer>
+</body>
+
 </html>
