--- a/Vulcanoriosity/MainScreen.html
+++ b/Vulcanoriosity/MainScreen.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <html lang="es">
-    <head>
-        <link rel="stylesheet" href="CSS/Style.css">
-    </head>
-    <body>
-        <header>
-            <div class="sticky">
-            <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-            <center><h3>Correo: volcanoriosity@mail.com<br>   Contacto: 9678653434</h3></center>
-            <center><h2>Clica a tu interés</h2></center>
+
+<head>
+    <link rel="stylesheet" href="CSS/Style.css">
+</head>
+
+<body>
+    <header>
+        <a href="MainScreen.html">
+            <h1>Vulcanoriosity</h1>
+        </a>
+        <h3>Correo: volcanoriosity@mail.com<br> Contacto: 9678653434</h3>
+        <h2>Clica a tu interés</h2>
+    </header>
+    <div class="menu">
+        <a title="Foto" href="Volcan.html"><img src="Imagenes/definicion.png" width=20% /></a>
+        <a title="Foto" href="PlacasTectonicas.html"><img src="Imagenes/PLACAS (1).png" width=20% /></a>
+        <a title="Foto" href="TiposVolcanes.html"><img src="Imagenes/TIPOSVOLCANESS.png" width=20% /></a>
+        <br>
+        <a title="Foto" href="Erupciones.html"><img src="Imagenes/TIPOSERUPCIONES.png" width=20% /></a>
+        <a title="Foto" href="VolcanEscudo.html"><img src="Imagenes/VolcanEnEscudo.png" width=20% /></a>
+        <a title="Foto" href="Lahar.html"><img src="Imagenes/laharrr.png" width=20% /></a>
+        <br>
+        <a title="Foto" href="Flujo.html"><img src="Imagenes/FlujoPiroclastico.png" width=20% /></a>
+        <a title="Foto" href="FormasVolcanicas.html"><img src="Imagenes/formasvolcanicas.png" width=20% /></a>
+        <a title="Foto" href="MaterialVolcanico.html"><img src="Imagenes/MATERIALVOLCANICO.png" width=20% /></a>
+        <br>
+    </div>
+    <footer>
+        <div class="info">
+            Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por
+            LinkedIn: Vulcanoriosity<br>
+            <div class="trabaja">
+                <a href="TrabajaConNosotros.html">
+                    <h2>Trabaja con nosotros</h2>
+                </a>
             </div>
-        </header>
-        
-        <center>
-            <a title="Foto" href="Volcan.html"><img src="Imagenes/definicion.png" width=500 height="300"/></a>
-            <a title="Foto" href="PlacasTectonicas.html"><img src="Imagenes/PLACAS.png" width=500 height="300"/></a>
-            <a title="Foto" href="TiposVolcanes.html"><img src="Imagenes/TIPOSVOLCANESS.png" width=500 height="300"/></a>
-                <br>
-            <a title="Foto" href="Erupciones.html"><img src="Imagenes/TIPOSERUPCIONES.png" width=500 height="300"/></a> 
-            <a title="Foto" href="VolcanEscudo.html"><img src="Imagenes/VolcanEnEscudo.png" width=500 height="300"/></a> 
-            <a title="Foto" href="Lahar.html"><img src="Imagenes/laharrr.png" width=500 height="300"/></a> 
-                <br>
-            <a title="Foto" href="Flujo.html"><img src="Imagenes/FlujoPiroclastico.png" width=500 height="300"/></a> 
-            <a title="Foto" href="FormasVolcanicas.html"><img src="Imagenes/formasvolcanicas.png" width=500 height="300"/></a> 
-            <a title="Foto" href="MaterialVolcanico.html"><img src="Imagenes/MATERIALVOLCANICO.png" width=500 height="300"/></a> 
-                <br>
-        </center>
-        <footer>
-            <div class="info">
-                <center>Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br></center>
-                <div class="trabaja">
-                    <center><a href = "TrabajaConNosotros.html" ><h2>Trabaja con nosotros</h2></a></center>
-                </div>
-            </div>
-            <footer>
-                <div class="info">
-                Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
-                </div>
-            </footer>    </body>
+        </div>
+    </footer>
+</body>
+
 </html>
