--- a/Vulcanoriosity/TiposVolcanes.html
+++ b/Vulcanoriosity/TiposVolcanes.html
@@ -1,47 +1,73 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <link rel="stylesheet" href="CSS/Style.css">
-    </head>
-    <body>
+
+<head>
+    <link rel="stylesheet" href="CSS/Style.css">
+</head>
+
+<body>
+    <div class="cabeza">
         <header>
-            <center><a href="MainScreen.html"><h1>Vulcanoriosity</h1></a></center>
-            <center><h3>Correo: volcanoriosity@mail.com   Contacto: 9678653434</h3></center>
-            <center><h2>Tipos de volcanes según su actividad</h2></center>
+            <a href="MainScreen.html">
+                <h1>Vulcanoriosity</h1>
+            </a>
+            <h3>Correo: volcanoriosity@mail.com<br> Contacto: 9678653434</h3>
+            <h2>Tipos de volcanes</h2>
         </header>
+    </div>
+    <div class="cuerpo">
         <ul>
-            <li><h5>Volcanes activos</h5>
+            <li>
+                <h5>Volcanes activos</h5>
                 <p>
-                    Los volcanes activos son aquellos que pueden entrar en actividad eruptiva en cualquier momento, es decir, que permanecen en estado de latencia. 
-                    Esto ocurre con la mayoría de los volcanes, pues ocasionalmente entran en actividad, permaneciendo en reposo la mayor parte del tiempo. 
-                    El período de actividad eruptiva puede durar desde una hora hasta varios años, como fue el caso del volcán de Pacaya y del Irazú. 
+                    Los volcanes activos son aquellos que pueden entrar en actividad eruptiva en cualquier momento, es
+                    decir, que permanecen en estado de latencia.
+                    Esto ocurre con la mayoría de los volcanes, pues ocasionalmente entran en actividad, permaneciendo
+                    en reposo la mayor parte del tiempo.
+                    El período de actividad eruptiva puede durar desde una hora hasta varios años, como fue el caso del
+                    volcán de Pacaya y del Irazú.
                     A día de hoy, no se ha descubierto ningún método seguro para predecir las erupciones.
                 </p>
-                <center><img src="Imagenes/VolcanActivo.jpg" width=400 height="300"/></center>
+                <div class="foto"><img src="Imagenes/VolcanActivo.jpg" width=50% /></div>
             </li>
-            <li><h5>Volcanes durmientes o inactivos</h5>
+            <li>
+                <h5>Volcanes durmientes o inactivos</h5>
                 <p>
-                    Los volcanes durmientes o inactivos son aquellos que mantienen ciertos signos de actividad, como la presencia de aguas termales, y han entrado en actividad 
-                    esporádicamente. Dentro de esta categoría suelen incluirse las fumarolas y los volcanes con largos períodos de inactividad entre una erupción y otra. 
+                    Los volcanes durmientes o inactivos son aquellos que mantienen ciertos signos de actividad, como la
+                    presencia de aguas termales, y han entrado en actividad
+                    esporádicamente. Dentro de esta categoría suelen incluirse las fumarolas y los volcanes con largos
+                    períodos de inactividad entre una erupción y otra.
                     Un volcán se considera durmiente si desde hace siglos no ha tenido una erupción.
-                </p>               
-                 <center><img src="Imagenes/VolcanInactivo.png" width=400 height="300"/></center>
+                </p>
+                <div class="foto"><img src="Imagenes/VolcanInactivo.png" width=50% /></div>
             </li>
-            <li><h5>Volcanes extintos</h5>
+            <li>
+                <h5>Volcanes extintos</h5>
                 <p>
-                    Los volcanes extintos son aquellos cuya última erupción fue registrada hace más de 25 000 años. Sin embargo, no se descarta la posibilidad de 
-                    que puedan despertar y liberar una erupción más fuerte que la de un volcán que está activo, causando grandes desastres. 
-                    También se les llama extintos porque fueron alejados de su fuente de magma, perdiendo poco a poco su actividad, esto sucede únicamente en volcanes de 
+                    Los volcanes extintos son aquellos cuya última erupción fue registrada hace más de 25 000 años. Sin
+                    embargo, no se descarta la posibilidad de
+                    que puedan despertar y liberar una erupción más fuerte que la de un volcán que está activo, causando
+                    grandes desastres.
+                    También se les llama extintos porque fueron alejados de su fuente de magma, perdiendo poco a poco su
+                    actividad, esto sucede únicamente en volcanes de
                     punto caliente, a diferencia de los volcanes de zonas de subducción.
 
                 </p>
-                <center><img src="Imagenes/VolcanExtinto.jfif"/></center>
+                <div class="foto"><img src="Imagenes/VolcanExtinto.jfif" width=50% /></div>
             </li>
         </ul>
-        <footer>
-            <div class="info">
-            Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por LinkedIn: Vulcanoriosity<br><center><h2>Trabaja con nosotros</h2></center>
+    </div>
+    <footer>
+        <div class="info">
+            Vulcanoriosity© Instagram: @vulcanoriosity, Twitter: @vulcanoriosity, FaceBook: Vulcanoriosity, buscanos por
+            LinkedIn: Vulcanoriosity<br>
+            <div class="trabaja">
+                <a href="TrabajaConNosotros.html">
+                    <h2>Trabaja con nosotros</h2>
+                </a>
             </div>
-        </footer>
-    </body>
+        </div>
+    </footer>
+</body>
+
 </html>
