Entrega 4 Prácticas DSI, GRID Y MOVIL
Se han realizado cambios en la página, añadiendo la posibilidad del tamaño móvil y un grid animado que continua con el diseño responsive.

--- a/Vulcanoriosity/PlacasTectonicas.html
+++ b/Vulcanoriosity/PlacasTectonicas.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <html lang="es">
-
-<head>
-    <link rel="stylesheet" href="CSS/Style.css">
-</head>
+    <head>
+        <link rel="stylesheet" media="screen and (min-width: 470px)" href="CSS/Style.css">
+        <link rel="stylesheet" media="screen and (max-width: 470px)" href="CSS/movil.css"/>
+    </head>
 
 <body>
     <div class="cabeza">
@@ -51,8 +52,8 @@
                     Anillo de Fuego del Pacífico.
                 </p>
                 <div class="foto"><img src="Imagenes/Convergente.png" width=50% /></div>
-                <div class="foto"><img src="Imagenes/MonteEtna.jpg" width=50% /><img
-                        src="Imagenes/Cinturón-de-fuego-del-pacífico.jpg" width=50% /></div>
+                <div class="foto"><img src="Imagenes/MonteEtna.jpg" width=50% /></div>
+                <div class="foto"><img src="Imagenes/Cinturón-de-fuego-del-pacífico.jpg" width=50% /></div>
             </li>
             <li>
                 <h5>Puntos calientes</h5>
