--- a/Vulcanoriosity/Erupciones.html
+++ b/Vulcanoriosity/Erupciones.html
@@ -2,7 +2,8 @@
 <html lang="es">
 
 <head>
-    <link rel="stylesheet" href="CSS/Style.css">
+    <link rel="stylesheet" media="screen and (min-width: 470px)" href="CSS/Style.css">
+    <link rel="stylesheet" media="screen and (max-width: 470px)" href="CSS/movil.css"/>
 </head>
 
 <body>
