--- a/Vulcanoriosity/Volcan.html
+++ b/Vulcanoriosity/Volcan.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <link rel="stylesheet" href="CSS/Style.css">
-</head>
+    <head>
+        <link rel="stylesheet" media="screen and (min-width: 470px)" href="CSS/Style.css">
+        <link rel="stylesheet" media="screen and (max-width: 390px)" href="CSS/movil.css"/>
+    </head>
 
 <body>
 
